--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bulma": "^0.7.5",
     "deep": "0.0.2",
     "diff": "^4.0.1",
     "ejs": "^2.5.7",
