--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CRUD app",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.18.2",
     "bulma": "^0.7.5",
     "deep": "0.0.2",
