--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KhalidH82/travel-Liaison.git"
+    "url": "git+https://https://github.com/KhalidH82/travelDash2.0.git"
   },
   "engines": {
     "node": "9.4.0"
@@ -38,7 +38,7 @@
   "author": "Khalid Hosein",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/KhalidH82/travel-Liaison/issues"
+    "url": "https://github.com/KhalidH82/travelDash2.0/issues"
   },
-  "homepage": "https://github.com/KhalidH82/travel-Liaison#readme"
+  "homepage": "https://github.com/KhalidH82/travelDash2.0#readme"
 }
