--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "travel-liaison",
+  "name": "travelDash2.0",
   "version": "1.0.0",
   "description": "CRUD app",
   "main": "app.js",
